@@ -2273,6 +2273,7 @@ get_group_load_store_type (stmt_vec_info stmt_info, tree vectype, bool slp,
 		   == dr_aligned
 		  || alignment_support_scheme == dr_unaligned_supported)
 	      && known_eq (nunits, (group_size - gap) * 2)
+	      && known_eq (nunits, group_size)
 	      && mode_for_vector (elmode, (group_size - gap)).exists (&vmode)
 	      && VECTOR_MODE_P (vmode)
 	      && targetm.vector_mode_supported_p (vmode)
@@ -8550,7 +8551,8 @@ vectorizable_load (stmt_vec_info stmt_info, gimple_stmt_iterator *gsi,
 			    && DR_GROUP_GAP (first_stmt_info) != 0
 			    && known_eq (nunits,
 					 (group_size
-					  - DR_GROUP_GAP (first_stmt_info)) * 2))
+					  - DR_GROUP_GAP (first_stmt_info)) * 2)
+			    && known_eq (nunits, group_size))
 			  ltype = build_vector_type (TREE_TYPE (vectype),
 						     (group_size
 						      - DR_GROUP_GAP
